fix small bug with spacing in header

--- a/app/index.scss
+++ b/app/index.scss
@@ -57,7 +57,6 @@ a:active {
   background: white;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
   z-index: 1;
-  padding: 0 20px;
   text-align: center;
 
   transition: all .3s ease-out;
@@ -68,6 +67,7 @@ a:active {
 
   .nav-edge {
     flex-shrink: 0;
+    padding: 0 10px;
   }
 
   .nav-button {
@@ -97,7 +97,6 @@ a:active {
 
   .header-title {
     overflow: hidden;
-    padding: 0 10px;
     font-size: 25px;
     font-weight: 300;
     margin: 0;
